# TestWayland

./: CMakeLists.txt  LICENSE  README.md  client.cpp  client.qml  compositor.cpp  compositor.h  main.cpp  main.qml  resources.qrc
